{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 107,
  "lineage": "41278bc3-471f-9af7-340a-54e54919bfa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0874aa65981a4e4f2",
            "domain": "vpc",
            "id": "eipalloc-0874aa65981a4e4f2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-93-136.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.93.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af25d0df86db00c1",
            "arn": "arn:aws:ec2:ap-south-1:391840463703:instance/i-04bd7f915eba383ba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bd7f915eba383ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b16d2708dfd54099",
            "private_dns": "ip-10-1-0-90.ap-south-1.compute.internal",
            "private_ip": "10.1.0.90",
            "public_dns": "ec2-65-2-124-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.124.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2727bcbb27d9b8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07710736d382606a6",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fce6c0202f7fa337"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:internet-gateway/igw-0787f6bfa940a8251",
            "id": "igw-0787f6bfa940a8251",
            "owner_id": "391840463703",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:loadbalancer/app/jenkins-lb-tf/858b225394a8caeb",
            "arn_suffix": "app/jenkins-lb-tf/858b225394a8caeb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-lb-tf-1972704595.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:loadbalancer/app/jenkins-lb-tf/858b225394a8caeb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb-tf",
            "security_groups": [
              "sg-0dfe4dbffd8a90f89"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008ee19631e7d202e"
              },
              {
                "subnet_id": "subnet-07710736d382606a6"
              },
              {
                "subnet_id": "subnet-0a8da7f52416c13fa"
              }
            ],
            "subnets": [
              "subnet-008ee19631e7d202e",
              "subnet-07710736d382606a6",
              "subnet-0a8da7f52416c13fa"
            ],
            "tags": {
              "Environment": "jenkins"
            },
            "tags_all": {
              "Environment": "jenkins"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "r_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:listener/app/jenkins-lb-tf/858b225394a8caeb/6b498cf5a106bfdf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:targetgroup/bastion/22be35d9bcbc95df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:listener/app/jenkins-lb-tf/858b225394a8caeb/6b498cf5a106bfdf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:loadbalancer/app/jenkins-lb-tf/858b225394a8caeb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jenkins",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:targetgroup/bastion/22be35d9bcbc95df",
            "arn_suffix": "targetgroup/bastion/22be35d9bcbc95df",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:targetgroup/bastion/22be35d9bcbc95df",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "bastion",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:targetgroup/bastion/22be35d9bcbc95df-20220117052328165300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:391840463703:targetgroup/bastion/22be35d9bcbc95df",
            "target_id": "i-04bd7f915eba383ba"
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_key_pair.dev",
            "aws_lb_target_group.jenkins",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0874aa65981a4e4f2",
            "connectivity_type": "public",
            "id": "nat-08fea5f4c97ef542d",
            "network_interface_id": "eni-0525024c7909e9972",
            "private_ip": "10.1.0.172",
            "public_ip": "3.109.93.136",
            "subnet_id": "subnet-07710736d382606a6",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:route-table/rtb-06bd13ac2aeac0b56",
            "id": "rtb-06bd13ac2aeac0b56",
            "owner_id": "391840463703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fea5f4c97ef542d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-data"
            },
            "tags_all": {
              "Name": "dev-route-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:route-table/rtb-0ae43db74c142b305",
            "id": "rtb-0ae43db74c142b305",
            "owner_id": "391840463703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fea5f4c97ef542d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:route-table/rtb-038ececabb1a64ab9",
            "id": "rtb-038ececabb1a64ab9",
            "owner_id": "391840463703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0787f6bfa940a8251",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route"
            },
            "tags_all": {
              "Name": "dev-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dataassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0281063c8b7773bf3",
            "route_table_id": "rtb-06bd13ac2aeac0b56",
            "subnet_id": "subnet-0dd8b3ad14c2b7649"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099df0c9640d2afed",
            "route_table_id": "rtb-06bd13ac2aeac0b56",
            "subnet_id": "subnet-0803c4362c273680b"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e49d758c562bae8",
            "route_table_id": "rtb-06bd13ac2aeac0b56",
            "subnet_id": "subnet-0befd23e2d353aac0"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6aa4ab04afabb2",
            "route_table_id": "rtb-0ae43db74c142b305",
            "subnet_id": "subnet-0c9f208694fc652a7"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee739d3eaf518bda",
            "route_table_id": "rtb-0ae43db74c142b305",
            "subnet_id": "subnet-0bc91a7d815e82d4b"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023b6ffc8e97cfda8",
            "route_table_id": "rtb-0ae43db74c142b305",
            "subnet_id": "subnet-056fccbeae5e39f0a"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00187b0830049eecf",
            "route_table_id": "rtb-038ececabb1a64ab9",
            "subnet_id": "subnet-07710736d382606a6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084054e578222972f",
            "route_table_id": "rtb-038ececabb1a64ab9",
            "subnet_id": "subnet-008ee19631e7d202e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7819659665aec0",
            "route_table_id": "rtb-038ececabb1a64ab9",
            "subnet_id": "subnet-0a8da7f52416c13fa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:security-group/sg-0dfe4dbffd8a90f89",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfe4dbffd8a90f89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "391840463703",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:security-group/sg-0fce6c0202f7fa337",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fce6c0202f7fa337",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "391840463703",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0dd8b3ad14c2b7649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd8b3ad14c2b7649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-1"
            },
            "tags_all": {
              "Name": "dev-datasubnet-1"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0803c4362c273680b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0803c4362c273680b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-2"
            },
            "tags_all": {
              "Name": "dev-datasubnet-2"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0befd23e2d353aac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0befd23e2d353aac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-3"
            },
            "tags_all": {
              "Name": "dev-datasubnet-3"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0c9f208694fc652a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9f208694fc652a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesubnet-1"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-1"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0bc91a7d815e82d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc91a7d815e82d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesubnet-2"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-2"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-056fccbeae5e39f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056fccbeae5e39f0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesubnet-3"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-3"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-07710736d382606a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07710736d382606a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet-1"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-1"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-008ee19631e7d202e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008ee19631e7d202e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet-2"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-2"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:subnet/subnet-0a8da7f52416c13fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8da7f52416c13fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391840463703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet-3"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-3"
            },
            "vpc_id": "vpc-0b5d65c56bd7eb136"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:391840463703:vpc/vpc-0b5d65c56bd7eb136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a93d160d3a2b22c4",
            "default_route_table_id": "rtb-085ebf9adacd9ef79",
            "default_security_group_id": "sg-0d35dd2209784b244",
            "dhcp_options_id": "dopt-0f5a12dbeee9ae573",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b5d65c56bd7eb136",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085ebf9adacd9ef79",
            "owner_id": "391840463703",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}